@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Radio 538 channel was completely broken
+Fixed: Radio 538 channel was completely broken again (Fixes #943)
 
 [I]Previous changes[/I]
+Fixed: Radio 538 channel was completely broken
 Added: 24Classics.com (Fixes #714)
 Fixed: Radio 538, Slam! FM and Q-Music streams broken (Fixes #665, Fixes #666, Fixes #667)
 Added: SLAM! TV stream (Fixes #650)
